samples/_failures_safe/1761004634_1ffd36_compile_base_compile_error/stderr.txt
./samples/SAFE/__tmp_f8bb29d1.c: In function ‘main’:
./samples/SAFE/__tmp_f8bb29d1.c:169:5: error: expected declaration or statement at end of input
  169 |     }
      |     ^
